--- a/style.css
+++ b/style.css
@@ -1,44 +1,39 @@
-
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  /* Float four columns side by side */
-  .col {
-    flex-direction: column;
-    justify-items: right;
-    width: 50%;
-    padding: 0 10px;
-  }
-  
-  /* Remove extra left and right margins, due to padding */
-  .row {margin: 0 -5px;}
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive columns */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
-  }
-  
-  /* Style the counter cards */
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
+    box-sizing: content-box;
+    margin: 0;
+    padding: 0;
+}
+
+aside {
+    border: 5px;
+    border-style: solid;
+    border-color: lawngreen;
+    width: 30vw;
+    height: 70vh;
+    margin-left: 5px;
+}
+header {
+    border: 5px;
+    border-style: solid;
+    border-color: pink;
+    width: 100vw;
     text-align: center;
-    background-color: #f1f1f1;
-  }
-  
+    justify-content: flex-start;
+    margin-left: 10px;
+    padding-left: 30px;
+    padding-right: 66px;
+
+}
+main {
+    display: inline-block;
+    border: 5px;
+    border-style: solid;
+    border-color: darkblue;
+}
+
+.container-forecast {
+    border-style: solid;
+    box-shadow: 1rem;
+    border-radius: 0px 0px 5px 5px;
+
+}
