--- a/style.css
+++ b/style.css
@@ -12,23 +12,21 @@ aside {
     height: 70vh;
     margin-left: 5px;
 }
-header {
-    border: 5px;
-    border-style: solid;
-    border-color: pink;
-    width: 100vw;
-    text-align: center;
-    justify-content: flex-start;
-    margin-left: 10px;
-    padding-left: 30px;
-    padding-right: 66px;
-
-}
 main {
     display: inline-block;
     border: 5px;
     border-style: solid;
     border-color: darkblue;
+}
+
+.jumbotron {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    text-align: center;
+    height: 15px;
+    font-weight: bold;
+    margin-top: 20px;
+
 }
 
 .container-forecast {
