--- a/style.css
+++ b/style.css
@@ -1,37 +1,66 @@
 * {
-    box-sizing: content-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-aside {
-    border: 5px;
-    border-style: solid;
-    border-color: lawngreen;
-    width: 30vw;
-    height: 70vh;
-    margin-left: 5px;
-}
-main {
-    display: inline-block;
-    border: 5px;
-    border-style: solid;
-    border-color: darkblue;
-}
-
-.jumbotron {
+body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
+}
+h1{
+    margin: 20px;
+    padding: 5px;
     text-align: center;
-    height: 15px;
-    font-weight: bold;
-    margin-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: oblique;
+    font-size: 36px;
+    border-bottom: 2rem;
 
 }
 
-.container-forecast {
-    border-style: solid;
-    box-shadow: 1rem;
-    border-radius: 0px 0px 5px 5px;
+.input{
+    text-align: left;
+    margin: 50px 25px;
+    padding-left: 15px 15px;
+}
+
+input[type="text"]{
+    height: 50px;
+    width: 200px;
+    padding-left: 10px;
+    background: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+}
+input[type="submit"]{
+    height: 50px;
+    width: 100px;
+    text-align: center;
+    background: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+}
+
+.card {
+    margin: 0px;
+    text-align: center;
+    display: inline-flex;
+       
+}
+
+#currentWeather {
+    display: flex-inline;
+    margin: 20px 10px;
+    border-bottom: 1rem;
+    border-left: 1rem;
+    border-color: lightgray;
+    border-radius: 3px;
+    list-style: none;
 
 }
