--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+.hide {
+    display: none;
+}
 
 body {
     font-family: Arial, Helvetica, sans-serif;
