--- a/assets/style.css
+++ b/assets/style.css
@@ -68,7 +68,8 @@ input[type="submit"]{
 }
 
 .jumbotron {
-    background-image: url(./images/Weather-Background.jpg);
+    background: url(./images/Weather-Background.jpg) center center / cover no-repeat;
+    background-size: 100% 100%;
     width: 97vw;
     color: lightgray;
     font-weight: 800;
